explorer/kubernetes/fill-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fill-pg
  name: fill-pg
spec:
  ports:
  - name: postgres
    port: 8080
    targetPort: 8080
  selector:
    app: fill-pg
