explorer/kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eosio-explorer
  name: eosio-explorer
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: eosio-explorer
