explorer/kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`explorer.latamlink.io`)
    services:
    - kind: Service
      name: eosio-explorer
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`explorer.latamlink.io`)
    services:
    - kind: Service
      name: eosio-explorer
      port: 80
  tls:
    secretName: tls-secret
